; ModuleID = '/home/carl/AnghaBench/esp-idf/components/sdmmc/test/extr_test_sdio.c_sdio_slave_set_blocksize.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/sdmmc/test/extr_test_sdio.c_sdio_slave_set_blocksize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SD_IO_FBR_START = common dso_local global i32 0, align 4
@SD_IO_CCCR_BLKSIZEL = common dso_local global i32 0, align 4
@SD_IO_CCCR_BLKSIZEH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32)* @sdio_slave_set_blocksize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdio_slave_set_blocksize(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32* %6, i32** %7, align 8
  store i32 0, i32* %8, align 4
  store i32* %8, i32** %9, align 8
  %11 = load i32, i32* @SD_IO_FBR_START, align 4
  %12 = load i32, i32* %5, align 4
  %13 = mul nsw i32 %11, %12
  store i32 %13, i32* %10, align 4
  %14 = load i32*, i32** %4, align 8
  %15 = load i32, i32* %10, align 4
  %16 = load i32, i32* @SD_IO_CCCR_BLKSIZEL, align 4
  %17 = add nsw i32 %15, %16
  %18 = load i32*, i32** %7, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @sdmmc_io_write_byte(i32* %14, i32 0, i32 %17, i32 %20, i32* null)
  %22 = call i32 @TEST_ESP_OK(i32 %21)
  %23 = load i32*, i32** %4, align 8
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* @SD_IO_CCCR_BLKSIZEH, align 4
  %26 = add nsw i32 %24, %25
  %27 = load i32*, i32** %7, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 1
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @sdmmc_io_write_byte(i32* %23, i32 0, i32 %26, i32 %29, i32* null)
  %31 = call i32 @TEST_ESP_OK(i32 %30)
  %32 = load i32*, i32** %4, align 8
  %33 = load i32, i32* %10, align 4
  %34 = load i32, i32* @SD_IO_CCCR_BLKSIZEL, align 4
  %35 = add nsw i32 %33, %34
  %36 = load i32*, i32** %9, align 8
  %37 = getelementptr inbounds i32, i32* %36, i64 0
  %38 = call i32 @sdmmc_io_read_byte(i32* %32, i32 0, i32 %35, i32* %37)
  %39 = call i32 @TEST_ESP_OK(i32 %38)
  %40 = load i32*, i32** %4, align 8
  %41 = load i32, i32* %10, align 4
  %42 = load i32, i32* @SD_IO_CCCR_BLKSIZEH, align 4
  %43 = add nsw i32 %41, %42
  %44 = load i32*, i32** %9, align 8
  %45 = getelementptr inbounds i32, i32* %44, i64 1
  %46 = call i32 @sdmmc_io_read_byte(i32* %40, i32 0, i32 %43, i32* %45)
  %47 = call i32 @TEST_ESP_OK(i32 %46)
  %48 = load i32, i32* %6, align 4
  %49 = load i32, i32* %8, align 4
  %50 = call i32 @TEST_ASSERT_EQUAL_HEX16(i32 %48, i32 %49)
  ret void
}

declare dso_local i32 @TEST_ESP_OK(i32) #1

declare dso_local i32 @sdmmc_io_write_byte(i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @sdmmc_io_read_byte(i32*, i32, i32, i32*) #1

declare dso_local i32 @TEST_ASSERT_EQUAL_HEX16(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
